src/objects/SurveyTaker__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SurveyTakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taken__c</fullName>
        <description>Whether the survey was taken or not</description>
        <label>Taken</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Survey Taken</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys Taken</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>